--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
 VITE_BACKEND_URL="https://tunevotebackend-production.up.railway.app"
 VITE_AUTH_0_DOMAIN_URL="dev-deslwdyelw63ku4q.us.auth0.com"
 VITE_AUTH_0_CLIENT_ID="HorCByRzeHJ6csLsCnnUUffqCVZT7w89"
-VITE_REDIRECT_URI=""
+VITE_REDIRECT_URI="https://tune-vote.vercel.app/dashboard"
